--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  0.4.1.tar.gz: b6137f1fc3f0b80ec937f3a430cc17b6f3db4094
+  fifengine-0.4.2.tar.gz: 964e5a1ad4f2c8acf7f35cd5d3e6008936fd133e
